# llvm-project-1

clang/docs/: LanguageExtensions.rst
clang/lib/AST/: ExprConstant.cpp
clang/lib/CodeGen/: CGBuiltin.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CodeGenFunction.h  CodeGenModule.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Format/: ContinuationIndenter.cpp  ContinuationIndenter.h  TokenAnnotator.cpp
clang/lib/Sema/: SemaChecking.cpp  SemaDeclCXX.cpp  SemaTemplate.cpp
clang/test/AST/: ast-dump-decl-json.m  gen_ast_dump_json_test.py
clang/test/CodeGen/: align_value.cpp  builtin-align-array.c  builtin-align.c  catch-nullptr-and-nonzero-offset-in-offsetof-idiom.c  catch-nullptr-and-nonzero-offset.c  pointer-signext.c
clang/test/Driver/: freebsd-m32.c  linux-per-target-runtime-dir.c
clang/test/Parser/: objc-static-assert.mm
clang/test/Sema/: builtin-align.c  static-assert.c
clang/test/SemaCXX/: builtin-align-cxx.cpp  constant-expression-cxx11.cpp  static-assert.cpp  (+1 more)
clang/utils/: ClangDataFormat.py
compiler-rt/cmake/: base-config-ix.cmake  builtin-config-ix.cmake
compiler-rt/test/: lit.common.cfg.py
libcxx/include/: version
libcxx/utils/: generate_feature_test_macro_components.py  run.py  ssh.py
lld/: CMakeLists.txt
lld/ELF/: InputSection.cpp  InputSection.h  OutputSections.cpp  Relocations.cpp  SyntheticSections.cpp  SyntheticSections.h
lld/test/: lit.cfg.py  lit.site.cfg.py.in
lld/tools/lld/: CMakeLists.txt  lld.cpp
lld/unittests/: CMakeLists.txt
llvm/utils/: lldbDataFormatters.py  update_cc_test_checks.py
runtimes/: CMakeLists.txt
(+205 files in other folders)
